--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,17 @@ h2,
 a {
   color: inherit !important; }
 
+a {
+  text-decoration: none !important; }
+
 .container {
   width: 1170px !important; }
+
+.btn {
+  width: fit-content !important;
+  text-transform: uppercase !important; }
+  .btn span {
+    font-weight: 500 !important; }
 
 .navbar {
   padding: 2.1rem !important; }
@@ -25,6 +34,51 @@ a {
 
 .logo {
   max-width: 100px; }
+
+.carousel {
+  position: relative; }
+  .carousel_social-icons {
+    position: absolute;
+    top: 20px;
+    right: 27%;
+    z-index: 5; }
+    .carousel_social-icons i {
+      background-color: #000;
+      padding: 0.3rem;
+      border-radius: 50%;
+      color: #fff; }
+    .carousel_social-icons i:hover {
+      background-color: #ed1c24; }
+
+.slide {
+  min-height: 40vh;
+  background-size: cover; }
+  .slide_content {
+    height: 40vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+  .slide h1,
+  .slide p {
+    width: fit-content;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 0.5rem 1.5rem;
+    text-transform: capitalize; }
+
+.owl-nav {
+  position: absolute;
+  bottom: 0;
+  right: 27%;
+  color: #fff;
+  font-size: 5rem;
+  display: flex;
+  gap: 1rem; }
+  .owl-nav button {
+    margin: 0 !important; }
+  .owl-nav button:hover {
+    background-color: transparent !important; }
+  .owl-nav button:focus {
+    outline: none !important; }
 
 /*!
  * Bootstrap v4.0.0 (https://getbootstrap.com)
