--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,7 +2,15 @@ $btn-padding-y: 0.5rem;
 $btn-padding-x: 3rem;
 $btn-border-radius: 0;
 
+// colors
 $custom-primary: #ed1c24;
+$custom-opacity-700: rgba(0, 0, 0, 0.7);
+
+// height
+$h-min: 40vh;
+
+// position
+$custom-position: 27%;
 
 $custom-theme-colors: (
   "custom-primary": $custom-primary,
