--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -12,6 +12,9 @@ $h-min: 40vh;
 // position
 $custom-position: 27%;
 
+// icons size
+$icons-size: 3rem;
+
 $custom-theme-colors: (
   "custom-primary": $custom-primary,
   "custom-secondary": #000,
