--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -22,7 +22,7 @@ section .container {
   & > i {
     font-size: $icons-size;
   }
-  & > h1 {
+  & h1 {
     text-transform: uppercase;
     font-weight: 400;
 
@@ -174,5 +174,47 @@ section .container {
   }
   to {
     transform: rotateZ(360deg);
+  }
+}
+
+// Packages
+.packages {
+  position: relative;
+  background: url("../img/video-image.png");
+  background-attachment: fixed;
+
+  .overlay {
+    position: absolute;
+    inset: 0;
+    background-color: $custom-opacity-500;
+  }
+
+  &_container {
+    position: relative;
+    z-index: 10;
+  }
+
+  &_play {
+    width: fit-content;
+    margin: 0 auto;
+    cursor: pointer;
+    i {
+      font-size: $icons-size + 2rem;
+
+      &::before {
+        transition: all 0.2s ease-in-out;
+      }
+    }
+
+    &:hover i::before {
+      transform: scale(1.1);
+    }
+  }
+}
+
+.modal-body {
+  iframe {
+    width: 100%;
+    aspect-ratio: 16/9;
   }
 }
