--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -5,6 +5,7 @@ $btn-border-radius: 0;
 // colors
 $custom-primary: #ed1c24;
 $custom-opacity-700: rgba(0, 0, 0, 0.7);
+$custom-opacity-500: rgba(0, 0, 0, 0.5);
 
 // height
 $h-min: 40vh;
