--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,8 @@
 @import "../node_modules/bootstrap/scss/mixins";
 
 @import "./variables";
+
+@import "./media-query";
 @import "./layout";
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
