--- a/css/main.css
+++ b/css/main.css
@@ -13,19 +13,37 @@
     bottom: -75px !important; }
 
   .carousel_social-icons {
-    left: 50% !important;
-    transform: translateX(-50%); }
+    left: 0 !important;
+    right: 0 !important;
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem; }
 
   .slide_content {
     align-items: center; }
 
   .owl-nav {
-    right: 50% !important;
-    transform: translateX(-50%); } }
+    left: 0 !important;
+    right: 0 !important;
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem; } }
 @media (max-width: 517px) {
+  h1,
+  h2,
+  p {
+    font-size: 10px; }
+
   .articles article {
     flex-direction: column;
-    align-items: center; } }
+    align-items: center; }
+
+  #offers_mountain-icon {
+    width: 350px;
+    bottom: -75px !important; } }
+@media (max-width: 425px) {
+  .owl-nav {
+    bottom: -20px !important; } }
 h1,
 h2,
 a {
@@ -50,12 +68,22 @@ section .container {
   width: fit-content !important;
   text-transform: uppercase !important;
   border: none !important; }
+  .btn:active {
+    outline: none !important; }
   .btn span {
     font-weight: 500 !important; }
 
+.btn-custom-primary:active {
+  outline: none !important; }
+.btn-custom-primary:focus {
+  box-shadow: none !important; }
 .btn-custom-primary:hover {
   background-color: #000 !important; }
 
+.btn-custom-secondary:active {
+  outline: none !important; }
+.btn-custom-secondary:focus {
+  box-shadow: none !important; }
 .btn-custom-secondary:hover {
   background-color: #ed1c24 !important; }
 
@@ -201,7 +229,8 @@ section .container {
     display: block;
     border: 1px solid #fff;
     background-color: transparent;
-    padding: 0.5rem; }
+    padding: 0.5rem;
+    color: #fff; }
     .newsletter_form input::placeholder {
       color: #fff; }
     .newsletter_form input:focus {
