--- a/sass/_media-query.scss
+++ b/sass/_media-query.scss
@@ -12,9 +12,6 @@
       flex-direction: column;
       align-items: center;
     }
-
-    &_content {
-    }
   }
 }
 
@@ -24,8 +21,14 @@
     bottom: -75px !important;
   }
   .carousel_social-icons {
-    left: 50% !important;
-    transform: translateX(-50%);
+    left: 0 !important;
+    right: 0 !important;
+
+    // transform: translateX(-50%);
+    // width: 50%;
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem;
   }
 
   .slide_content {
@@ -33,13 +36,22 @@
   }
 
   .owl-nav {
-    right: 50% !important;
-    // left: 50% !important;
-    transform: translateX(-50%);
+    left: 0 !important;
+    right: 0 !important;
+
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem;
   }
 }
 
 @media (max-width: 517px) {
+  h1,
+  h2,
+  p {
+    font-size: 10px;
+  }
+
   .articles {
     article {
       //   display: flex !important;
@@ -47,5 +59,16 @@
       align-items: center;
       //   margin: 0 !important;
     }
+  }
+
+  #offers_mountain-icon {
+    width: 350px;
+    bottom: -75px !important;
+  }
+}
+
+@media (max-width: 425px) {
+  .owl-nav {
+    bottom: -20px !important;
   }
 }
